--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "typings": "dist/index.d.ts",
     "devDependencies": {
+        "@types/node": "^16.4.0",
         "prettier": "^2.3.2",
         "typescript": "^4.3.5"
     },
